--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Hi lily.</h1>
-<a href="https://raw.githubusercontent.com/hatsag/hatttie.github.io/master/assets/images/miley.JPG">
+<img src="https://raw.githubusercontent.com/hatsag/hatttie.github.io/master/assets/images/miley.JPG" alt="miley">
