--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		  h1 {font-family: big-caslon-fb, serif;
 				font-weight: 400;
 				font-style: normal; 
-			    font-size:6rem;
+			    font-size:90px;
 			  font-family: "Big Caslon";
 font-weight: 500;
 line-height: 90px;
